--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,6 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
     {% if current_user.is_authenticated %}
-        <h1>{{ current_user.username }}</h1>
+        <div class="content-section">
+            <div class="media">
+                <img class="rounded-circle account-img" src="{{ image_file }}">
+                <div class="media-body">
+                    <h2 class="account-heading">{{ current_user.username }}</h2>
+                    <p class="text-secondary">{{ current_user.email }}</p>
+                </div>
+            </div>
+
+            <form action="" method="POST" enctype="multipart/form-data">
+                {{ form.hidden_tag() }}
+                <fieldset class="form-group">
+                    <legend class="border-bottom">Profile Info</legend>
+                    <div class="form-group mt-2">
+                        {{ form.username.label }} {% if form.username.errors %}
+                        {{ form.username(class='form-control form-control-lg is-invalid') }}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %} {{ form.username(class='form-control') }} {% endif %}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.email.label }} {% if form.email.errors %}
+                        {{ form.email(class='form-control form-control-lg is-invalid') }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %} {{ form.email(class='form-control') }} {% endif %}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.picture.label }}
+                        {{ form.picture(class='form-control-file') }}
+                    </div>
+
+
+                </fieldset>
+                <div class="form-group">{{ form.submit(class='btn btn-outline-primary') }}</div>
+            </form>
+        </div>
+
     {% endif %}
 {% endblock %}
