--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,57 +1,60 @@
 {% extends 'base.html' %} {% block content %}
-<form action="" method="POST">
-  {{form.hidden_tag()}}
-  <fieldset>
-    <div class="form-group">
-      {{form.username.label}} {%if form.username.errors%} {{
-      form.username(class='form-control form-control-lg is-invalid') }}
-      <div class="invalid-feedback">
-        {%for error in form.username.errors%}
-        <span>{{error}}</span>
-        {%endfor%}
-      </div>
-      {%else%} {{form.username(class='form-control')}} {%endif%}
-    </div>
+    <div class="content-section">
+        <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <div class="form-group">
+                    {{ form.username.label }} {% if form.username.errors %}
+                    {{ form.username(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} {{ form.username(class='form-control') }} {% endif %}
+                </div>
 
-    <div class="form-group">
-      {{form.email.label}} {%if form.email.errors%} {{
-      form.email(class='form-control form-control-lg is-invalid') }}
-      <div class="invalid-feedback">
-        {%for error in form.email.errors%}
-        <span>{{error}}</span>
-        {%endfor%}
-      </div>
-      {%else%} {{form.email(class='form-control')}} {%endif%}
-    </div>
+                <div class="form-group">
+                    {{ form.email.label }} {% if form.email.errors %}
+                    {{ form.email(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} {{ form.email(class='form-control') }} {% endif %}
+                </div>
 
-    <div class="form-group">
-      {{form.password.label}} {%if form.password.errors%} {{
-      form.password(class='form-control form-control-lg is-invalid') }}
-      <div class="invalid-feedback">
-        {%for error in form.password.errors%}
-        <span>{{error}}</span>
-        {%endfor%}
-      </div>
-      {%else%} {{form.password(class='form-control')}} {%endif%}
-    </div>
+                <div class="form-group">
+                    {{ form.password.label }} {% if form.password.errors %}
+                    {{ form.password(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} {{ form.password(class='form-control') }} {% endif %}
+                </div>
 
-    <div class="form-group">
-      {{form.confirm_password.label}} {%if form.confirm_password.errors%} {{
-      form.confirm_password(class='form-control form-control-lg is-invalid') }}
-      <div class="invalid-feedback">
-        {%for error in form.confirm_password.errors%}
-        <span>{{error}}</span>
-        {%endfor%}
-      </div>
-      {%else%} {{form.confirm_password(class='form-control')}} {%endif%}
+                <div class="form-group">
+                    {{ form.confirm_password.label }} {% if form.confirm_password.errors %}
+                    {{ form.confirm_password(class='form-control form-control-lg is-invalid') }}
+                    <div class="invalid-feedback">
+                        {% for error in form.confirm_password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %} {{ form.confirm_password(class='form-control') }} {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">{{ form.submit(class='btn btn-outline-primary') }}</div>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Already have an account?
+                <a href="{{ url_for('login') }}" class="ml-2">Sign In</a>
+            </small>
+        </div>
+
     </div>
-  </fieldset>
-  <div class="form-group">{{form.submit(class='btn btn-outline-primary')}}</div>
-</form>
-<div class="border-top pt-3">
-  <small class="text-muted">
-    Already have an account?
-    <a href="{{ url_for('login') }}" class="ml-2">Sign In</a>
-  </small>
-</div>
 {% endblock content %}
