--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -15,6 +15,7 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
     />
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png' )}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css' ) }}">
 
     {% if title %}
