--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -45,6 +45,9 @@
                 {% if current_user.is_authenticated %}
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('new_post') }}">New Post</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('account') }}">Account</a>
                     </li>
                     <li class="nav-item">
