--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,3 +1,13 @@
-{%extends 'base.html' %} {%block content%}
-<h1>Home Page</h1>
-{%endblock content%}
+{%extends 'base.html' %} {%block content%} {%for post in posts%}
+<article class="media content-section">
+    <img src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}" alt="avatar" class="rounded-circle article-img">
+  <div class="media-body">
+    <div class="article-metadata">
+      <a class="mr-2" href="#">{{ post.author.username }}</a>
+      <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+    </div>
+    <h2><a href="{{ url_for('post', post_id=post.id) }}" class="article-title">{{ post.title }}</a></h2>
+      <p class="article-content">{{ post.content }}</p>
+  </div>
+</article>
+{%endfor%} {%endblock content%}
