added route(user/posts), now users can see each other's posts

--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css' ) }}">
 
     {% if title %}
-        <title>Flask - {{ title }}</title>
+        <title>{{ title }}</title>
     {% else %}
-        <title>Flask Login System</title>
+        <title>Flask Blog</title>
     {% endif %}
 </head>
 <body>
