--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -5,7 +5,7 @@
                  class="rounded-circle article-img">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ post.author.username }}</a>
+                    <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
                     <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 </div>
                 <h2><a href="{{ url_for('post', post_id=post.id) }}" class="article-title">{{ post.title }}</a></h2>
@@ -31,4 +31,5 @@
                 <a class="page-link" href="{{ url_for('index', page=posts.next_num) }}">Next</a>
             </li>
         </ul>
-    </nav>{% endblock content %}
+    </nav>
+{% endblock content %}
