--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -31,7 +31,11 @@
                    {{ form.remember(class='form-check-input') }}
                    {{ form.remember.label(class='form-check-label') }}
                </div>
-        <div class="form-group mt-2">{{ form.submit(class='btn btn-outline-primary') }}</div>
+        <div class="form-group mt-2">{{ form.submit(class='btn btn-outline-primary') }}
+         <small class="text-muted">
+
+            <a href="{{ url_for('request_token') }}" class="ml-2">Forgot Password?</a>
+        </small></div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
