--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -28,14 +28,14 @@
 <nav class="navbar navbar-expand-lg mb-5 navbar-dark bg-dark">
 
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Blog</a>
+        <a class="navbar-brand" href="{{ url_for('main.index') }}">Blog</a>
         <div class="d-flex  justify-content-between collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('main.index') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('about') }}">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('main.about') }}">About <span class="sr-only">(current)</span></a>
                 </li>
 
 
@@ -45,19 +45,19 @@
                 {% if current_user.is_authenticated %}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('new_post') }}">New Post</a>
+                        <a class="nav-link" href="{{ url_for('users.new_post') }}">New Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('account') }}">Account</a>
+                        <a class="nav-link" href="{{ url_for('users.account') }}">Account</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-link" href="{{ url_for('users.logout') }}">Logout</a>
                         {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                        <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
                     </li>
                 {% endif %}
 
