--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -34,13 +34,13 @@
         <div class="form-group mt-2">{{ form.submit(class='btn btn-outline-primary') }}
          <small class="text-muted">
 
-            <a href="{{ url_for('request_token') }}" class="ml-2">Forgot Password?</a>
+            <a href="{{ url_for('users.request_token') }}" class="ml-2">Forgot Password?</a>
         </small></div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
             Need an account?
-            <a href="{{ url_for('register') }}" class="ml-2">Sign Up</a>
+            <a href="{{ url_for('users.register') }}" class="ml-2">Sign Up</a>
         </small>
     </div>
 {% endblock content %}
