--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -45,7 +45,7 @@
                 {% if current_user.is_authenticated %}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('users.new_post') }}">New Post</a>
+                        <a class="nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('users.account') }}">Account</a>
